--- a/AndroidRemote/app/src/main/res/layout/pidset.xml
+++ b/AndroidRemote/app/src/main/res/layout/pidset.xml
@@ -49,5 +49,17 @@
         android:progress="0"
         android:secondaryProgress="0" />
 
+    <org.eazegraph.lib.charts.ValueLineChart xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cubiclinechart"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:paddingBottom="40dp"
+        app:egAnimationTime="0"
+        app:egCurveSmoothness="0.4"
+        app:egLegendHeight="40dp"
+        android:padding="10dp"
+        app:egUseCubic="true"/>
 
 </LinearLayout>
