--- a/AndroidRemote/app/src/main/res/values/colors.xml
+++ b/AndroidRemote/app/src/main/res/values/colors.xml
@@ -15,5 +15,10 @@
     <color name="white2">#DDDDDD</color>
     <color name="black">#000000</color>
     <color name="listback">#292C2E</color>
+    <color name="primary">#2196F3</color>
+    <color name="primary_dark">#0288D1</color>
+    <color name="accent">#03A9F4</color>
+    <color name="ripple_primary">#B3E5FC</color>
+    <color name="fab">#FE6DA8</color>
 
 </resources>
